Fixed some tables theme misaligned

--- a/ControlPanel-Web/src/main/resources/static/css/theme.css
+++ b/ControlPanel-Web/src/main/resources/static/css/theme.css
@@ -268,7 +268,7 @@ body {
 }
 
 .panel-table td {
-    padding: 40px 50px;
+    padding: 40px 30px;
     border-bottom: 1px solid #1c1f26;
 }
 
